<resources>
    <string name="app_name">StackExchange Users</string>
    <string name="user_name">User name</string>
    <string name="reputation">Reputation</string>
    <string name="top_tags">Top tags</string>
    <string name="badges">Badges</string>
    <string name="location">Location</string>
    <string name="creation_date">Creation Date</string>
    <string name="badges_value">Bronze: %s\nSilver: %s\nGold: %s</string>
</resources>